--- a/project/app/src/main/res/layout/fragment_modify.xml
+++ b/project/app/src/main/res/layout/fragment_modify.xml
@@ -7,26 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".fragment_modify_setting">
 
-    <Switch
-        android:id="@+id/sw_age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="24dp"
-        android:text="display"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sw_phone" />
-
-    <Switch
-        android:id="@+id/sw_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="168dp"
-        android:layout_marginEnd="24dp"
-        android:text="display"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_modify" />
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_modify"
         android:layout_width="0dp"
@@ -39,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/linearLayout_modify"
+        android:id="@+id/low_modify"
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:background="#707070"
@@ -69,110 +49,105 @@
             android:text="submit" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/txt_phone_modify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="32dp"
-        android:autofillHints="Phone"
-        android:ems="10"
-        android:hint="Phone"
-        android:inputType="phone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_username_modify" />
-
-    <EditText
-        android:id="@+id/txt_age_modify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="32dp"
-        android:autofillHints="Phone"
-        android:ems="10"
-        android:hint="Age"
-        android:inputType="phone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_phone_modify" />
-
-    <EditText
-        android:id="@+id/txt_username_modify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="84dp"
-        android:autofillHints="Username"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_modify" />
-
-    <Switch
-        android:id="@+id/sw_gender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="24dp"
-        android:text="display"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sw_age" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RadioGroup
         android:id="@+id/rg_sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="97dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="3dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_age_modify">
+        app:layout_constraintTop_toBottomOf="@+id/txt_birthday_txt">
 
         <RadioButton
             android:id="@+id/rb0"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:text="Female"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:checked="true"
+            android:text="Female" />
 
         <RadioButton
             android:id="@+id/rb1"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
-            android:layout_marginEnd="10dp"
-            android:text="Male"
-            app:layout_constraintEnd_toStartOf="@+id/rb0"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:text="Male" />
 
-    <RadioGroup
-        android:layout_width="249dp"
-        android:layout_height="122dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginBottom="172dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <RadioButton
-            android:id="@+id/radioButton3"
-            android:layout_width="87dp"
-            android:layout_height="wrap_content"
-            android:text="RadioButton" />
-
-        <RadioButton
-            android:id="@+id/radioButton"
+        <Switch
+            android:id="@+id/sw_gender"
             android:layout_width="wrap_content"
-            android:layout_height="81dp"
-            android:text="RadioButton" />
+            android:layout_height="match_parent"
+            android:layout_marginEnd="24dp"
+            android:text="display" />
 
     </RadioGroup>
+
+    <EditText
+        android:id="@+id/txt_birthday_txt"
+        android:layout_width="408dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="3dp"
+        android:ems="10"
+        android:hint="Birthday"
+        android:inputType="date"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_til" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txt_username_til"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="81dp"
+        app:errorEnabled="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_modify">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_username_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Username"
+            android:inputType="text"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="86dp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txt_email_til"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="3dp"
+        app:errorEnabled="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_password_til">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_email_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            tools:layout_editor_absoluteX="33dp"
+            tools:layout_editor_absoluteY="494dp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txt_password_til"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        app:errorEnabled="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_username_til">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_password_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
