--- a/project/app/src/main/res/layout/activity_channel.xml
+++ b/project/app/src/main/res/layout/activity_channel.xml
@@ -18,76 +18,86 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_marginTop="40dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
         <Button
             android:id="@+id/channel1"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_weight="1"
-            android:onClick="toPost1"
             android:background="@android:color/transparent"
+            android:onClick="toPost1"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
+
         <Button
             android:id="@+id/channel2"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_weight="1"
-            android:onClick="toPost2"
             android:background="@android:color/transparent"
+            android:onClick="toPost2"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
+
     <LinearLayout
-        android:id="@+id/linearLayout41"
+        android:id="@+id/linearLayout11"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
+        android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_tech"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/icon_tech" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_digital"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/icon_digital" />
     </LinearLayout>
+
     <LinearLayout
-        android:id="@+id/linearLayout42"
+        android:id="@+id/linearLayout12"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout41">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
+            android:gravity="center"
             android:text="① Technology"
-            android:textAllCaps="false"
-            android:gravity="center" />
+            android:textAllCaps="false" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
+            android:gravity="center"
             android:text="② Digital"
-            android:textAllCaps="false"
-            android:gravity="center" />
+            android:textAllCaps="false" />
     </LinearLayout>
+
+
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -95,71 +105,80 @@
         android:layout_height="90dp"
         android:layout_marginTop="40dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">
+
         <Button
             android:id="@+id/channel3"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_weight="1"
-            android:onClick="toPost3"
             android:background="@android:color/transparent"
+            android:onClick="toPost3"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
+
         <Button
             android:id="@+id/channel4"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_weight="1"
-            android:onClick="toPost4"
             android:background="@android:color/transparent"
+            android:onClick="toPost4"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout31"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
+        android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+        app:layout_constraintTop_toTopOf="@id/linearLayout3">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_life"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/icon_food" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_fashion"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/icon_film" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout32"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout31">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:text="③ Life"
-            android:textAllCaps="false"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="③ Food"
+            android:textAllCaps="false" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:text="④ Fashion"
-            android:textAllCaps="false"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="④ Film &#038; TV"
+            android:textAllCaps="false" />
     </LinearLayout>
+
+
 
     <LinearLayout
         android:id="@+id/linearLayout5"
@@ -168,142 +187,79 @@
         android:layout_marginTop="40dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
         <Button
             android:id="@+id/channel5"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_weight="1"
-            android:onClick="toPost5"
             android:background="@android:color/transparent"
+            android:onClick="toPost5"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
+
         <Button
             android:id="@+id/channel6"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_weight="1"
-            android:onClick="toPost6"
             android:background="@android:color/transparent"
+            android:onClick="toPost6"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout51"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
+        android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+        app:layout_constraintTop_toTopOf="@+id/linearLayout5">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_food"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/icon_game" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_film"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/icon_anime" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout52"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout51">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:text="⑤ Food"
-            android:textAllCaps="false"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="⑤ Game"
+            android:textAllCaps="false" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:text="⑥ Film &#038; TV"
-            android:textAllCaps="false"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="⑥Animation"
+            android:textAllCaps="false" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout6"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="40dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
-        <Button
-            android:id="@+id/channel7"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_weight="1"
-            android:onClick="toPost7"
-            android:background="@android:color/transparent"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="116dp" />
-        <Button
-            android:id="@+id/channel8"
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_weight="1"
-            android:onClick="toPost8"
-            android:background="@android:color/transparent"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="116dp" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/linearLayout61"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="32dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/icon_game"
-            android:scaleType="fitCenter" />
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/icon_anime"
-            android:scaleType="fitCenter" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/linearLayout62"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout61">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:text="⑦ Game"
-            android:textAllCaps="false"
-            android:gravity="center" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:text="⑧ Animation"
-            android:textAllCaps="false"
-            android:gravity="center" />
-    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/linearLayout7"
@@ -311,79 +267,88 @@
         android:layout_height="90dp"
         android:layout_marginTop="40dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+
         <Button
-            android:id="@+id/channel9"
+            android:id="@+id/channel7"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_weight="1"
-            android:onClick="toPost9"
             android:background="@android:color/transparent"
+            android:onClick="toPost7"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
+
         <Button
-            android:id="@+id/channel10"
+            android:id="@+id/channel8"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_weight="1"
-            android:onClick="toPost10"
             android:background="@android:color/transparent"
+            android:onClick="toPostLocal"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout71"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
+        android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
+        app:layout_constraintTop_toTopOf="@+id/linearLayout7">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_tour"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/icon_tour" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_photo"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/icon_location" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout72"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout71">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:text="⑨ Tourism"
-            android:textAllCaps="false"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="⑦ Tourism"
+            android:textAllCaps="false" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:text="⑩ Photo"
-            android:textAllCaps="false"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="⑧ Local"
+            android:textAllCaps="false" />
     </LinearLayout>
+
+
 
     <fragment
         android:id="@+id/bottomBar"
+        android:name="com.example.groupproject.bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:name="com.example.groupproject.bottom_bar"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
